--- a/roles/masters/tasks/main.yml
+++ b/roles/masters/tasks/main.yml
@@ -11,6 +11,6 @@
   when: "'monitoring' in groups and dockerbuild is undefined"
 - include: sensu.yml
   tags: monitoring-client
-  when: "'monitoring' in groups and not ansible_local.system.is_atomic | bool"
+  when: "'monitoring' in groups"
 - include: bashrc.yml
   tags: bashrc
