--- a/roles/nodes/defaults/main.yml
+++ b/roles/nodes/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
+deployment_type: 'origin'
 nodes_deployment_type: "{{ deployment_type | default('openshift') }}"
 nodes_deamon_name: "{% if deployment_type == 'origin' %}origin-node{% elif deployment_type == 'openshift-enterprise' %}atomic-openshift-node{% else %}openshift-node{% endif %}"
 nodes_etc_config: "{% if deployment_type == 'origin' or deployment_type == 'openshift-enterprise' %}origin{% else %}openshift{% endif %}"
