--- a/roles/common/tasks/post/sensu.yml
+++ b/roles/common/tasks/post/sensu.yml
@@ -46,9 +46,9 @@
        - sensu-plugins-disk-checks
        - sensu-plugins-http
 
-- name: ensure service sensu-client started
-  service:
-    name: sensu-client
-    state: started
-    enabled: yes
-  when: dockerbuild is undefined
+#- name: ensure service sensu-client started
+#  service:
+#    name: sensu-client
+#    state: started
+#    enabled: yes
+#  when: dockerbuild is undefined
