--- a/roles/mysql/tasks/mysqld.yml
+++ b/roles/mysql/tasks/mysqld.yml
@@ -5,13 +5,14 @@
     - mariadb
     - mariadb-server
 
-- name: mysql security rules (iptables / selinux)
-  lineinfile:
-    dest: /etc/sysconfig/iptables
-    line: "-A INPUT -p tcp --dport 3306 -s 127.0.0.1 -j ACCEPT"
-    insertbefore: "^-A INPUT -j REJECT"
-  notify:
-        - mysql security rules
+# DSt comment
+#- name: mysql security rules (iptables / selinux)
+#  lineinfile:
+#    dest: /etc/sysconfig/iptables
+#    line: "-A INPUT -p tcp --dport 3306 -s 127.0.0.1 -j ACCEPT"
+#    insertbefore: "^-A INPUT -j REJECT"
+#  notify:
+#        - mysql security rules
 
 - name: set mysql port
   ini_file:
