--- a/roles/sensu/defaults/main.yml
+++ b/roles/sensu/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
+deployment_type: "origin"
 sensu_manage_docker_storage: "{{ manage_docker_storage | default('true') }}"
 
 sensu_deployment_type: "{{ deployment_type | default('openshift') }}"
